# DoorbellAIPlatform

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  pages.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: db.py  exporters.py  main.py  models.py  realtime.py  schemas.py  seed.py  services.py
backend/app/core/: config.py
backend/tests/: test_api.py
benchmarks/outputs/: latest.json  summary.md  (+1 more)
config/: edge.demo.yaml  edge.mock.yaml  edge.pi.yaml  threshold_profiles.yaml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
docs/: architecture.md  deployment.md  event-intelligence.md  github-pages.md  quickstart.md  third-party-notices.md  troubleshooting.md
docs-site/: index.html  package-lock.json  package.json  vite.config.ts
edge-runtime/: CMakeLists.txt
edge-runtime/include/porchlight/capture/: frame_source.hpp
edge-runtime/include/porchlight/comms/: http_client.hpp
edge-runtime/include/porchlight/config/: config_manager.hpp
edge-runtime/include/porchlight/core/: types.hpp
edge-runtime/include/porchlight/health/: health_collector.hpp
edge-runtime/include/porchlight/inference/: inference_engine.hpp
edge-runtime/include/porchlight/logic/: event_aggregator.hpp
edge-runtime/include/porchlight/runtime/: device_runtime.hpp
edge-runtime/include/porchlight/storage/: local_event_store.hpp
edge-runtime/include/porchlight/util/: json.hpp  logger.hpp
edge-runtime/src/: main.cpp
edge-runtime/src/capture/: frame_source.cpp  opencv_camera_source.cpp
edge-runtime/src/comms/: http_client.cpp
edge-runtime/src/config/: config_manager.cpp
edge-runtime/src/health/: health_collector.cpp
edge-runtime/src/inference/: inference_engine.cpp
edge-runtime/src/logic/: event_aggregator.cpp
edge-runtime/src/runtime/: device_runtime.cpp
edge-runtime/src/storage/: local_event_store.cpp
edge-runtime/src/util/: json.cpp  logger.cpp
edge-runtime/tests/: test_event_logic.cpp
scripts/: benchmark.sh  demo_lite.sh  download_model.sh  export_docs_assets.py  publish_benchmark.py  setup.sh
simulator/: Dockerfile  porchlight_simulator.py
(+26 files in other folders)
